FlightPath 6.x Changelog
========================

2022-10-03
  Re-arranging in popup course description how we show that the db_grade is different than the assigned grade.  Only
  applies when we've made a modification due to the grade being numeric.  We will now show the original numeric grade first.
  

2022-09-26
  Added additional code to help prevent issues when invalid courses are defined in group definitions.
  

2022-09-22
  Fixed bug in install.php where we were not correctly setting up our GLOBALS['pdo'] object, causing fresh installs to fail.
  
  Fixed bug in system.module, where when we try to first store our serialized course cache, it incorrectly shows a permission error (because
  the file has 0 bytes).
  
  Fixed bug in alerts.install, one of the queries to create a table was invalid.
  

2022-09-19
  Fixed bug in Masquerade module where it wasn't allowing users to search by CWID.
  
  Added caching when fetching school name or code by id.
  
  Removed "department" from faculty table.
  
  Added indexes to student_degrees table.
  
  Fixed the "Advisor Use" report to pull department correctly.
  
  Adjusted the "Major Counts" report to not show school code if schools module not enabled.
  
  Altered the "Major Counts" report to show all degree levels (1, 2 and 3) not just 1 and 2.
  

2022-08-29
  Added lang='en' to <html> tag in core fp6_clean theme. This is for greater accessibility.
  

2022-08-18
  Removed unnecessary __autoload() function in index.php; was causing incompatibility with PHP 8.x.


2022-08-17
  Added tweaks to the static screen "dialog-empty", so that it displays a throbber graphic while loading.
  
  Changed name of dialog-empty to dialog-loading.php, for clarity.
  
  In clone_advising, made it so you can enter comments after # symbol.

  Moved the autocomplete function to find students from calendar module to the student_search module,